--- a/app/src/main/res/layout-land/fragment_recipe_details_description.xml
+++ b/app/src/main/res/layout-land/fragment_recipe_details_description.xml
@@ -12,6 +12,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp">
 
+        <android.support.constraint.Guideline
+            android:id="@+id/fragment_recipe_details_vertical_guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.5" />
+
         <android.support.v7.widget.CardView
             android:id="@+id/fragment_recipe_details_description_card"
             android:layout_width="0dp"
@@ -21,7 +28,7 @@
             app:cardUseCompatPadding="true"
             app:contentPadding="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/fragment_recipe_details_vertical_guideline"
             app:layout_constraintTop_toTopOf="parent">
 
             <include layout="@layout/view_recipe_description" />
@@ -37,7 +44,7 @@
             app:cardUseCompatPadding="true"
             app:contentPadding="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/fragment_recipe_details_vertical_guideline"
             app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_description_card">
 
             <include layout="@layout/view_recipe_category" />
@@ -53,7 +60,7 @@
             app:cardUseCompatPadding="true"
             app:contentPadding="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/fragment_recipe_details_vertical_guideline"
             app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_category_card">
 
             <include layout="@layout/view_recipe_labels" />
@@ -69,7 +76,7 @@
             app:cardUseCompatPadding="true"
             app:contentPadding="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/fragment_recipe_details_vertical_guideline"
             app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_labels_card">
 
             <include layout="@layout/view_recipe_time" />
@@ -84,9 +91,9 @@
             app:cardPreventCornerOverlap="false"
             app:cardUseCompatPadding="true"
             app:contentPadding="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/fragment_recipe_details_vertical_guideline"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_time_card">
+            app:layout_constraintTop_toTopOf="parent">
 
             <include layout="@layout/view_recipe_nutrition" />
 
@@ -98,7 +105,7 @@
             android:layout_height="24dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_nutrition_card" />
+            app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_time_card" />
 
     </android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
