--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -38,7 +38,7 @@
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                app:srcCompat="@drawable/bg_drawer_header"
+                app:srcCompat="@color/gray_400"
                 tools:ignore="ContentDescription" />
 
             <android.support.v7.widget.Toolbar
@@ -87,6 +87,6 @@
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_photo" />
 
-    <include layout="@layout/activity_recipe_details_bottom" />
+    <!--<include layout="@layout/activity_recipe_details_bottom" />-->
 
 </android.support.design.widget.CoordinatorLayout>
