--- a/app/src/main/res/layout/drawer_base_statistic.xml
+++ b/app/src/main/res/layout/drawer_base_statistic.xml
@@ -21,7 +21,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/drawer_date_end_icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_date_top" />
+        app:srcCompat="@drawable/recipe_time_icon" />
 
     <TextView
         android:id="@+id/drawer_date_top_text"
