--- a/app/src/main/res/menu/menu_recipe_detail.xml
+++ b/app/src/main/res/menu/menu_recipe_detail.xml
@@ -4,7 +4,7 @@
     tools:contextRef="com.alsash.reciper.ui.activity.RecipeDetailsActivity">
     <item
         android:id="@+id/menu_recipe_detail_edit"
-        android:icon="@drawable/ic_edit"
+        android:icon="@drawable/edit_icon"
         android:title="@string/action_edit"
         app:showAsAction="ifRoom" />
     <item
