--- a/app/src/main/res/layout/view_recipe_ingredients.xml
+++ b/app/src/main/res/layout/view_recipe_ingredients.xml
@@ -56,11 +56,10 @@
         android:layout_marginTop="8dp"
         android:orientation="vertical"
         android:scrollbars="none"
-        app:layoutManager="android.support.v7.widget.GridLayoutManager"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_horizontal_divider"
-        app:spanCount="@integer/recipe_ingredients_list_span"
         tools:listitem="@layout/item_ingredient" />
 
 </android.support.constraint.ConstraintLayout>
