--- a/app/src/main/res/layout/view_recipe_nutrition.xml
+++ b/app/src/main/res/layout/view_recipe_nutrition.xml
@@ -33,6 +33,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recipe_nutrition_title"
+        app:showText="false"
         tools:text="Per 100 gram" />
 
     <View
