--- a/app/src/main/res/layout/item_method_card.xml
+++ b/app/src/main/res/layout/item_method_card.xml
@@ -40,10 +40,9 @@
             style="@style/RippleButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:tint="@color/gray_400"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/edit_icon"
+            app:srcCompat="@drawable/edit_icon_off"
             tools:ignore="ContentDescription" />
 
         <View
@@ -61,8 +60,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:background="@null"
             android:fontFamily="serif"
@@ -72,7 +71,8 @@
             android:scrollHorizontally="false"
             android:scrollbarStyle="insideInset"
             android:scrollbars="vertical"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textSize="14sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
