--- a/app/src/main/res/layout/item_method_card.xml
+++ b/app/src/main/res/layout/item_method_card.xml
@@ -20,19 +20,15 @@
 
         <TextView
             android:id="@+id/item_method_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="0dp"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:fontFamily="serif"
+            android:gravity="center"
             android:labelFor="@+id/item_method_body"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="@+id/item_method_edit"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_method_edit"
+            app:layout_constraintTop_toTopOf="parent"
             tools:text="1" />
 
         <ImageButton
