--- a/app/src/main/res/layout/activity_fragment_single.xml
+++ b/app/src/main/res/layout/activity_fragment_single.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_base_frame_coordinator"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_fragment_single_coordinator"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ui.activity.FragmentSingleActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/activity_base_frame_appbar"
+        android:id="@+id/activity_fragment_single_appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/activity_base_frame_toolbar"
+            android:id="@+id/activity_fragment_single_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
@@ -22,7 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <FrameLayout
-        android:id="@+id/activity_base_frame_container"
+        android:id="@+id/activity_fragment_single_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
