--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -58,7 +58,7 @@
                 android:layout_marginRight="76dp"
                 app:layout_collapseMode="pin"
                 app:tabGravity="center"
-                app:tabIndicatorColor="@color/primary"
+                app:tabIndicatorColor="@color/orange_500"
                 app:tabMode="scrollable"
                 app:tabTextAppearance="@style/TextAppearance.RecipeTitle.Tab"
                 tools:ignore="RtlHardcoded" />
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:tint="@color/primary"
+        android:tint="@color/orange_500"
         app:backgroundTint="@color/gray_100"
         app:elevation="4dp"
         app:fabSize="mini"
