--- a/app/src/main/res/layout/activity_recipe_details_bottom.xml
+++ b/app/src/main/res/layout/activity_recipe_details_bottom.xml
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:scaleType="fitXY"
-        android:tint="@color/primary"
+        android:tint="@color/orange_500"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
