--- a/app/src/main/res/layout/drawer_base_header.xml
+++ b/app/src/main/res/layout/drawer_base_header.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="16dp"
         android:alpha="0.8"
         android:contentDescription="@string/drawer_account_image_description"
-        android:tint="@color/primary"
+        android:tint="@color/orange_500"
         app:layout_constraintBottom_toTopOf="@+id/drawer_account_name"
         app:layout_constraintLeft_toLeftOf="parent"
         app:srcCompat="@drawable/ic_account" />
