--- a/app/src/main/res/menu/toolbar_recipe_list.xml
+++ b/app/src/main/res/menu/toolbar_recipe_list.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/search"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/appbar_search_icon"
         android:title="@string/action_search"
         app:showAsAction="ifRoom" />
 
