--- a/app/src/main/res/layout/item_author_entity.xml
+++ b/app/src/main/res/layout/item_author_entity.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_label_card"
+    android:id="@+id/item_author_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardElevation="4dp"
@@ -11,34 +11,34 @@
     app:contentPadding="0dp">
 
     <android.support.constraint.ConstraintLayout
-        android:id="@+id/item_label_constraint"
+        android:id="@+id/item_author_constraint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/item_label_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/item_author_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
+            android:src="@color/gray_400"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/label_icon_gray"
             tools:ignore="ContentDescription,RtlHardcoded" />
 
         <EditText
-            android:id="@+id/item_label_name"
+            android:id="@+id/item_author_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
-            android:background="@null"
             android:fontFamily="serif"
-            android:hint="@string/hint_label_name"
+            android:gravity="center"
+            android:hint="@string/hint_author_name"
             android:inputType="text"
             android:overScrollMode="ifContentScrolls"
             android:scrollHorizontally="true"
@@ -48,20 +48,28 @@
             android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toRightOf="@+id/item_label_image"
-            app:layout_constraintRight_toLeftOf="@+id/item_label_edit"
+            app:layout_constraintLeft_toRightOf="@+id/item_author_image"
+            app:layout_constraintRight_toLeftOf="@+id/item_author_edit"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.5"
             tools:ignore="LabelFor,RtlHardcoded"
-            tools:text="Label name" />
+            tools:text="Author name" />
 
         <ImageButton
-            android:id="@+id/item_label_edit"
+            android:id="@+id/item_author_image_edit"
             style="@style/RippleButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/item_author_edit"
+            app:srcCompat="@drawable/photo_icon_orange"
+            tools:ignore="ContentDescription" />
+
+        <ImageButton
+            android:id="@+id/item_author_edit"
+            style="@style/RippleButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/edit_icon_gray"
