Update ui. Finalize non-recipes views.

--- a/app/src/main/res/layout/item_food_entity_expand.xml
+++ b/app/src/main/res/layout/item_food_entity_expand.xml
@@ -30,12 +30,12 @@
             android:id="@+id/item_food_ndbno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
             android:fontFamily="serif"
             android:hint="@string/hint_food_ndbno"
             android:inputType="numberDecimal"
             android:overScrollMode="ifContentScrolls"
-            android:paddingEnd="16dp"
-            android:paddingStart="16dp"
             android:scrollHorizontally="true"
             android:scrollbars="none"
             android:selectAllOnFocus="false"
@@ -60,7 +60,7 @@
         android:id="@+id/item_food_nutrition_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:fontFamily="serif"
         android:text="@string/hint_food_nutrition_value"
@@ -92,7 +92,7 @@
         android:id="@+id/item_food_carbs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
+        android:layout_marginLeft="32dp"
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
