--- a/app/src/main/res/layout/item_food_entity_expand.xml
+++ b/app/src/main/res/layout/item_food_entity_expand.xml
@@ -96,7 +96,7 @@
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_carbohydrate"
+        android:textColor="@color/green_500"
         android:textSize="14sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/item_food_protein"
@@ -115,7 +115,7 @@
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_protein"
+        android:textColor="@color/red_500"
         android:textSize="14sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/item_food_fat"
@@ -132,7 +132,7 @@
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_fat"
+        android:textColor="@color/amber_500"
         android:textSize="14sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/item_food_energy"
@@ -151,7 +151,7 @@
         android:fontFamily="serif"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_energy_dark"
+        android:textColor="@color/teal_accent_700"
         android:textSize="14sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
