--- a/app/src/main/res/layout/view_nutrition_chart.xml
+++ b/app/src/main/res/layout/view_nutrition_chart.xml
@@ -19,7 +19,7 @@
             android:id="@+id/nutrition_energy"
             android:layout_width="0dp"
             android:layout_gravity="center"
-            android:background="@drawable/view_chart_nutrition_energy_circle"
+            android:background="@drawable/nutrition_energy_shape"
             android:fontFamily="sans-serif-condensed"
             android:gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
@@ -97,7 +97,7 @@
         android:padding="2dp"
         android:text="@string/nutrition_carbohydrate"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_carbohydrate"
+        android:textColor="@color/green_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
@@ -114,7 +114,7 @@
         android:padding="2dp"
         android:text="@string/nutrition_protein"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_protein"
+        android:textColor="@color/red_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
@@ -131,7 +131,7 @@
         android:padding="2dp"
         android:text="@string/nutrition_fat"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/nutrition_fat"
+        android:textColor="@color/amber_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
         app:layout_constraintRight_toLeftOf="@+id/nutrition_vertical_guideline"
@@ -142,7 +142,7 @@
         android:id="@+id/nutrition_carbohydrate_title_bg_line"
         android:layout_width="8dp"
         android:layout_height="1dp"
-        android:background="@color/nutrition_carbohydrate_bg"
+        android:background="@color/green_050"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline"
         app:layout_constraintLeft_toRightOf="@+id/nutrition_carbohydrate_title"
         app:layout_constraintTop_toTopOf="@+id/nutrition_carbohydrate_horizontal_guideline" />
@@ -151,7 +151,7 @@
         android:id="@+id/nutrition_protein_title_bg_line"
         android:layout_width="8dp"
         android:layout_height="1dp"
-        android:background="@color/nutrition_protein_bg"
+        android:background="@color/red_050"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_protein_horizontal_guideline"
         app:layout_constraintLeft_toRightOf="@+id/nutrition_protein_title"
         app:layout_constraintTop_toTopOf="@+id/nutrition_protein_horizontal_guideline" />
@@ -160,7 +160,7 @@
         android:id="@+id/nutrition_fat_title_bg_line"
         android:layout_width="8dp"
         android:layout_height="1dp"
-        android:background="@color/nutrition_fat_bg"
+        android:background="@color/amber_050"
         app:layout_constraintBottom_toTopOf="@+id/nutrition_fat_horizontal_guideline"
         app:layout_constraintLeft_toRightOf="@+id/nutrition_fat_title"
         app:layout_constraintTop_toTopOf="@+id/nutrition_fat_horizontal_guideline" />
@@ -174,7 +174,7 @@
         android:fontFamily="sans-serif-condensed"
         android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/nutrition_carbohydrate"
+        android:textColor="@color/green_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintHorizontal_bias="0.49"
@@ -191,7 +191,7 @@
         android:fontFamily="sans-serif-condensed"
         android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/nutrition_protein"
+        android:textColor="@color/red_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
@@ -207,7 +207,7 @@
         android:fontFamily="sans-serif-condensed"
         android:padding="2dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@color/nutrition_fat"
+        android:textColor="@color/amber_500"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@id/nutrition_horizontal_guideline"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
@@ -218,7 +218,7 @@
         android:id="@+id/nutrition_carbohydrate_value_bg_line"
         android:layout_width="1dp"
         android:layout_height="8dp"
-        android:background="@color/nutrition_carbohydrate_bg"
+        android:background="@color/green_050"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_carbohydrate_vertical_guideline"
         app:layout_constraintTop_toBottomOf="@id/nutrition_carbohydrate_value" />
@@ -227,7 +227,7 @@
         android:id="@+id/nutrition_protein_value_bg_line"
         android:layout_width="1dp"
         android:layout_height="4dp"
-        android:background="@color/nutrition_protein_bg"
+        android:background="@color/red_050"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_protein_vertical_guideline"
         app:layout_constraintTop_toBottomOf="@id/nutrition_protein_value" />
@@ -236,7 +236,7 @@
         android:id="@+id/nutrition_fat_value_bg_line"
         android:layout_width="1dp"
         android:layout_height="4dp"
-        android:background="@color/nutrition_fat_bg"
+        android:background="@color/amber_050"
         app:layout_constraintLeft_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintRight_toLeftOf="@id/nutrition_fat_vertical_guideline"
         app:layout_constraintTop_toBottomOf="@id/nutrition_fat_value" />
