--- a/app/src/main/res/drawable/nutrition_energy_shape.xml
+++ b/app/src/main/res/drawable/nutrition_energy_shape.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/nutrition_energy" />
+    <solid android:color="@color/teal_accent_400" />
     <stroke
         android:width="4dp"
-        android:color="@color/nutrition_energy_dark" />
+        android:color="@color/teal_accent_700" />
 </shape>
