--- a/app/src/main/res/drawable/nutrition_fat_shape.xml
+++ b/app/src/main/res/drawable/nutrition_fat_shape.xml
@@ -8,6 +8,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/nutrition_fat_bg" />
+        android:color="@color/amber_050" />
 
 </shape>
