--- a/app/src/main/res/layout/activity_recipe_details.xml
+++ b/app/src/main/res/layout/activity_recipe_details.xml
@@ -55,13 +55,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:layout_gravity="bottom"
-                android:layout_marginRight="76dp"
                 app:layout_collapseMode="pin"
                 app:tabGravity="center"
                 app:tabIndicatorColor="@color/orange_500"
                 app:tabMode="scrollable"
-                app:tabTextAppearance="@style/TextAppearance.RecipeTitle.Tab"
-                tools:ignore="RtlHardcoded" />
+                app:tabTextAppearance="@style/TextAppearance.RecipeTitle.Tab" />
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -73,20 +71,5 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:svp_is_swipe_enabled="true" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/activity_recipe_detail_fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:tint="@color/orange_500"
-        app:backgroundTint="@color/gray_100"
-        app:elevation="4dp"
-        app:fabSize="mini"
-        app:layout_anchor="@id/activity_recipe_details_appbar"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_photo" />
-
-    <!--<include layout="@layout/activity_recipe_details_bottom" />-->
 
 </android.support.design.widget.CoordinatorLayout>
