Update ui. Finalize non-recipes views.

--- a/app/src/main/res/layout/item_category_entity.xml
+++ b/app/src/main/res/layout/item_category_entity.xml
@@ -50,6 +50,7 @@
             android:fontFamily="serif"
             android:gravity="center"
             android:hint="@string/hint_category_name"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:overScrollMode="ifContentScrolls"
             android:scrollHorizontally="true"
