--- a/app/src/main/res/layout/item_food_entity.xml
+++ b/app/src/main/res/layout/item_food_entity.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="0dp"
         android:fontFamily="serif"
         android:hint="@string/hint_food_name"
+        android:imeOptions="actionDone"
         android:inputType="text"
         android:overScrollMode="ifContentScrolls"
         android:scrollHorizontally="true"
@@ -35,6 +36,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="?android:attr/textColorPrimaryNoDisable"
         android:textSize="16sp"
+        app:backgroundTint="@color/cs_def_transparent_enabled_orange"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/item_food_image"
         app:layout_constraintRight_toLeftOf="@+id/item_food_edit"
