--- a/app/src/main/res/layout/item_author_entity.xml
+++ b/app/src/main/res/layout/item_author_entity.xml
@@ -38,6 +38,7 @@
             android:layout_marginTop="8dp"
             android:fontFamily="serif"
             android:hint="@string/hint_author_name"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:overScrollMode="ifContentScrolls"
             android:scrollHorizontally="true"
@@ -46,6 +47,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textSize="16sp"
+            app:backgroundTint="@color/cs_def_transparent_enabled_orange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/item_author_image"
             app:layout_constraintRight_toLeftOf="@+id/item_author_edit"
