--- a/app/src/main/res/layout/item_food_entity_expand.xml
+++ b/app/src/main/res/layout/item_food_entity_expand.xml
@@ -19,8 +19,10 @@
         android:id="@+id/item_food_ndbno_layout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginRight="96dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="112dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/item_food_nutrition_image"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/item_food_expand_horizontal_divider"
@@ -34,6 +36,7 @@
             android:layout_marginStart="8dp"
             android:fontFamily="serif"
             android:hint="@string/hint_food_ndbno"
+            android:imeOptions="actionDone"
             android:inputType="numberDecimal"
             android:overScrollMode="ifContentScrolls"
             android:scrollHorizontally="true"
@@ -42,6 +45,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textSize="14sp"
+            app:backgroundTint="@color/cs_def_transparent_enabled_orange"
             tools:ignore="LabelFor,RtlHardcoded"
             tools:text="12345678" />
     </android.support.design.widget.TextInputLayout>
@@ -67,7 +71,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/item_food_nutrition_quantity"
-        app:layout_constraintLeft_toRightOf="@+id/item_food_nutrition_image"
+        app:layout_constraintLeft_toLeftOf="@+id/item_food_ndbno_layout"
         app:layout_constraintTop_toBottomOf="@+id/item_food_ndbno_layout"
         app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed"
