--- a/app/src/main/res/layout/item_label_entity.xml
+++ b/app/src/main/res/layout/item_label_entity.xml
@@ -36,6 +36,7 @@
             android:layout_marginRight="24dp"
             android:fontFamily="serif"
             android:hint="@string/hint_label_name"
+            android:imeOptions="actionDone"
             android:inputType="text"
             android:overScrollMode="ifContentScrolls"
             android:scrollHorizontally="true"
@@ -44,6 +45,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:textColor="?android:attr/textColorPrimaryNoDisable"
             android:textSize="16sp"
+            app:backgroundTint="@color/cs_def_transparent_enabled_orange"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toRightOf="@+id/item_label_image"
