--- a/app/src/main/res/layout/fragment_recipe_creation_dialog.xml
+++ b/app/src/main/res/layout/fragment_recipe_creation_dialog.xml
@@ -7,24 +7,23 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/recipe_creation_name"
+        android:id="@+id/recipe_creation_dialog_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
+        android:layout_marginTop="24dp"
         android:fontFamily="serif"
         android:hint="@string/hint_recipe_name"
         android:imeOptions="actionDone"
         android:inputType="textCapSentences"
         android:overScrollMode="ifContentScrolls"
+        android:paddingEnd="24dp"
+        android:paddingStart="24dp"
         android:scrollHorizontally="true"
         android:scrollbars="none"
         android:selectAllOnFocus="false"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="?android:attr/textColorPrimaryNoDisable"
-        android:textSize="18sp"
+        android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -34,13 +33,14 @@
         android:id="@+id/recipe_creation_category_list"
         android:layout_width="0dp"
         android:layout_height="108dp"
+        android:layout_marginTop="8dp"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:scrollbars="none"
         app:layoutManager="android.support.v7.widget.LinearLayoutManager"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recipe_creation_name"
+        app:layout_constraintTop_toBottomOf="@+id/recipe_creation_dialog_name"
         tools:listitem="@layout/item_category_selection" />
 
     <android.support.v7.widget.RecyclerView
