--- a/app/src/main/res/layout/item_method_card.xml
+++ b/app/src/main/res/layout/item_method_card.xml
@@ -59,6 +59,7 @@
             android:background="@null"
             android:fontFamily="serif"
             android:gravity="top|start"
+            android:imeOptions="actionDone"
             android:inputType="textMultiLine"
             android:overScrollMode="always"
             android:scrollHorizontally="false"
