--- a/app/src/main/res/layout/fragment_recipe_details_description.xml
+++ b/app/src/main/res/layout/fragment_recipe_details_description.xml
@@ -31,11 +31,11 @@
         <android.support.v7.widget.CardView
             android:id="@+id/fragment_recipe_details_category_card"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="100dp"
             app:cardElevation="4dp"
             app:cardPreventCornerOverlap="false"
             app:cardUseCompatPadding="true"
-            app:contentPadding="8dp"
+            app:contentPadding="0dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_recipe_details_description_card">
