--- a/app/src/main/res/layout/view_recipe_category.xml
+++ b/app/src/main/res/layout/view_recipe_category.xml
@@ -5,26 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
         android:id="@+id/recipe_category_image"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:src="@color/gray_200"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:adjustViewBounds="true"
+        android:alpha="0.9"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5"
+        app:srcCompat="@color/gray_400"
         tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/recipe_category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:fontFamily="serif"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/recipe_category_image"
-        app:layout_constraintLeft_toRightOf="@+id/recipe_category_image"
-        app:layout_constraintTop_toTopOf="@+id/recipe_category_image"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Category name" />
 
     <ImageButton
@@ -32,9 +40,11 @@
         style="@style/RippleButton"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/edit_icon_gray"
+        app:srcCompat="@drawable/edit_icon_white"
         tools:ignore="ContentDescription" />
 
 </android.support.constraint.ConstraintLayout>
